<resources>
    <string name="app_name">Freehand</string>

    <!--Fragment names-->
    <string name="sign_out_fragment">Sign Out</string>
    <string name="edit_profile_fragment">Edit Profile</string>
    <string name="account_fragment">Account Settings</string>
    <string name="profile_fragment">Profile</string>
    <string name="chat_fragment">Chat</string>
    <string name="private_chat_fragment">Private Chat</string>


    <!--dialog names-->
    <string name="confirm_password_dialog">ConfirmPasswordDialog</string>
    <string name="brush_settings_dialog">BrushSettingsDialog</string>

    <!-- Firebase messages -->
    <string name="auth_failed">Authentication failed.</string>
    <string name="auth_success">Authentication success.</string>

    <!--Firebase database fields-->
    <string name="dbname_users">users</string>
    <string name="dbname_user_photos">user_photos</string>
    <string name="dbname_chats">chats</string>
    <string name="dbname_user_chats">user_chats</string>
    <string name="dbname_user_likes">user_likes</string>
    <string name="field_email">email</string>
    <string name="field_name">name</string>
    <string name="field_age">age</string>
    <string name="field_location">location</string>
    <string name="field_description">description</string>
    <string name="field_pictures_number">pictures_number</string>
    <string name="field_profile_photo">profile_photo</string>
    <string name="field_last_timestamp">last_timestamp</string>


    <!--Intent Extras-->
    <string name="calling_activity">calling_activity</string>
    <string name="selected_image">selected_image</string>
    <string name="selected_bitmap">selected_bitmap</string>
    <string name="return_to_fragment">return_to_fragment</string>
    <string name="chat_id">chat_id</string>
    <string name="person_name">person_name</string>
    <string name="other_user_id">other_user_id</string>




    <!--Activity Names-->
    <string name="profile_activity">Profile Activity</string>
    <string name="share_activity">Share Activity</string>


    <!--photo types-->
    <string name="new_photo">new_photo</string>
    <string name="profile_photo">profile_photo</string>

    <!--image types-->
    <string name="img_squareImageView">img_squareImageView</string>
    <string name="img_imageView">img_imageView</string>



    <!--strings-->
    <string name="string_gallery">GALLERY</string>
    <string name="string_camera">CAMERA</string>
    <string name="string_open_camera">OPEN CAMERA</string>
    <string name="string_select">Select</string>
    <string name="string_upload">Upload</string>
    <string name="string_done">Done</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_brush_size">Brush Size</string>
    <string name="string_brush_opacity">Brush Opacity</string>
    <string name="string_login">Login</string>
    <string name="string_email">Email</string>
    <string name="string_password">Password</string>
    <string name="string_no_account_yet">No account yet?\u0020</string>
    <string name="string_signup">Sign up</string>
    <string name="string_settings">Settings</string>
    <string name="string_drawing_space">Drawing Space</string>
    <string name="string_confirm">Confirm</string>
    <string name="string_change_email_to">Change Email to:</string>




    <!--toasts-->
    <string name="toast_fill_out_all_fields">All fields must be filled out</string>
    <string name="toast_18_or_older">Sorry, you must be 18 or older to create an account</string>






</resources>
