<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/heading2"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:id="@+id/dialogChangeTitle"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/body"
            android:textColor="@color/black"
            android:id="@+id/dialogChangeValue"
            android:layout_marginBottom="30dp"
            android:text="email"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirm Password"
            android:textSize="@dimen/heading2"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_password"
            android:id="@+id/confirm_password"
            android:inputType="textPassword"
            android:textSize="@dimen/pre_body"
            />

    </LinearLayout>

    <!-- Cancel and done buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <!--cancel-->
        <TextView
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:textSize="@dimen/heading3"
            android:textColor="@color/primary_green"
            android:text="@string/string_cancel"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/button_rectangle_white"
            android:id="@+id/dialogCancel"
            />

        <!--done-->
        <TextView
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:textSize="@dimen/heading3"
            android:textColor="@color/white"
            android:text="@string/string_confirm"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/button_rectangle_eden"
            android:id="@+id/dialogConfirm"
            />

    </LinearLayout>

</LinearLayout>